--- a/style.css
+++ b/style.css
@@ -2,36 +2,49 @@
 :root {
     --base: rgb(254,202,7);
     font-family: sans-serif;
+	font-size: 15px;
     margin: 0 0 0 0 ;
     padding: 0 0 0 0 ;
     opacity: 0.70;
   }
 
-.rond{
+#rond{
     transform: rotate(90deg);
     width:215px;
     height:215px;
-    clip-path:ellipse(50% 50%);
-    box-shadow: 0px 0px 20px 20px #343434;
+    overflow:hidden;
+    -webkit-border-radius:120px;
+    -moz-border-radius:120px;
+    border-radius:120px;
+    box-shadow: 0px 0px 2px 2px #343434;
 
 }
 main {
+  width: 100%;
   display: flex;
-  justify-content:center;
+  justify-content: justify;
+  border: 1px solid black;
+  padding: 0 1em 0 0;
+  margin: 0 10em 0 0 ;
 }
-aside {
-  width: 30%;
+main aside {
+  width: 33%;
   background-color:var(--base) ;
-  margin-left: 20px;
   margin-right: 20px;
-
-
+  margin-left: 0px;
+  padding-left: 0px;
 }
-aside header{
+main aside header{
   text-align : center;
   margin : 70px auto 70px auto;
 }
-aside h2 {
+#sport{
+    display: block;
+	overflow:hidden;
+    margin-left: auto;
+    margin-right: auto ;
+}
+main aside h2 {
   text-align : center;
   text-transform: uppercase;
   background-color: black;
@@ -39,7 +52,7 @@ aside h2 {
   padding-top: 10px;
   color:var(--base);
 }
-aside p{
+main aside p{
   padding: 0 20px 0 20px;
 }
 article{
@@ -57,10 +70,16 @@ article header h3{
   margin-top: 0px;
   margin-bottom: 0px;
 }
+hr {
+  height: 2px;
+  background-color: var(--base);
+  border: none;
+}
 article header hr{
   background-color: var(--base);
-  width: 50px;  
+  width: 55px;  
   margin-top: 0px;
+  margin-right: 95%;
   padding-top: 0px;
 
 }
@@ -79,11 +98,28 @@ article section hr{
 }
 article section{
   text-transform: uppercase;
-  
 }
-hr {
-  height: 2px;
-  background-color: var(--base);
-  border: none;
-
+ul{
+	padding-left: 20px;
+}
+li {
+	list-style-image: url("img/puce1.png");
+}
+li:first-child {
+	list-style-image: url("img/puce2.png");
+}
+li article{
+	display: flex;
+	justify-content: space-between;
+	margin:0 0 0 0;
+	padding: 0 0 0 0;
+}
+li article section{
+	margin-top: 0px;
+	padding-top: 0px;
+	margin-right: 0px;
+	padding-right: 0px;
+}
+li section article header h4{
+	padding-top: 0px;
 }
