--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-
-:root {
+body{
+  font-family: Helvetica, sans-serif;
+    font-size: 15px;
     --base: rgb(254,202,7);
-    font-family: sans-serif;
-	font-size: 15px;
     margin: 0 0 0 0 ;
     padding: 0 0 0 0 ;
     opacity: 0.70;
-  }
-
+}
 #rond{
     transform: rotate(90deg);
     width:215px;
@@ -19,36 +17,38 @@
     box-shadow: 0px 0px 2px 2px #343434;
 
 }
+h1,h2,h3{
+  text-transform: uppercase;
+}
 main {
   width: 100%;
   display: flex;
   justify-content: justify;
   border: 1px solid black;
-  padding: 0 1em 0 0;
-  margin: 0 10em 0 0 ;
+  padding: 0 2em 0 0;
+  margin: 0 2em 0 0 ;
 }
 main aside {
   width: 33%;
   background-color:var(--base) ;
-  margin-right: 20px;
+  margin-right: 1.5em;
   margin-left: 0px;
   padding-left: 0px;
 }
 main aside header{
   text-align : center;
-  margin : 70px auto 70px auto;
+  margin : 4em auto 4em auto;
 }
 #sport{
     display: block;
-	overflow:hidden;
+	  overflow:hidden;
     margin-left: auto;
     margin-right: auto ;
 }
 main aside h2 {
   text-align : center;
-  text-transform: uppercase;
   background-color: black;
-  height: 45px;
+  height: 2em;
   padding-top: 10px;
   color:var(--base);
 }
@@ -60,7 +60,7 @@ article{
   padding-top: 120px;
 }
 article header h1{
-  font-size: 40px;
+  font-size: 3em;
   padding-bottom: 0px;
   margin-bottom: 0px;
 
@@ -77,7 +77,7 @@ hr {
 }
 article header hr{
   background-color: var(--base);
-  width: 55px;  
+  width: 3.5em;  
   margin-top: 0px;
   margin-right: 95%;
   padding-top: 0px;
@@ -95,12 +95,16 @@ article section h2 i{
 }
 article section hr{
   padding-bottom: 0px;
+  margin-right: 4em;
 }
 article section{
-  text-transform: uppercase;
+  margin-bottom: 2em;
+}
+article header{
+  display: block;
 }
 ul{
-	padding-left: 20px;
+	padding-left: 2em;
 }
 li {
 	list-style-image: url("img/puce1.png");
@@ -110,16 +114,49 @@ li:first-child {
 }
 li article{
 	display: flex;
-	justify-content: space-between;
-	margin:0 0 0 0;
-	padding: 0 0 0 0;
+  justify-content: space-between;
+  padding-left: 0.2em;
+  margin-top: 0px;
+  padding-top: 0px;
+
+}
+li article header{
+  width: 25%;
 }
 li article section{
 	margin-top: 0px;
 	padding-top: 0px;
-	margin-right: 0px;
-	padding-right: 0px;
+  margin-right: 2em;
+	padding-right: 2em;
 }
-li section article header h4{
-	padding-top: 0px;
+h4{
+  font-size: 0.8em;
+  height:1em;
+  margin-top: 0em;
+  margin-bottom: 0em;
+  padding-bottom: 0em;
+}
+h5{
+margin-bottom: 0em;
+margin-top: 1em;
+padding-top: 0em;
+padding-bottom: 0em;
+}
+h2 i{
+  padding-right: 2em;
+}
+@media screen and (max-width: 880px) {
+  main {
+   display: block;
+  }
+  main aside{
+    width: 100%;
+  }
+  main aside header{
+    margin-bottom: 2em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+  }
+  li article{
+    display: block;
 }
