--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     padding: 0 0 0 0 ;
     opacity: 0.70;
 }
-#rond{
+#rond {
     width:215px;
     height:215px;
     overflow:hidden;
@@ -14,15 +14,14 @@ body{
     -moz-border-radius:120px;
     border-radius:120px;
     box-shadow: 0px 0px 2px 2px #343434;
-
 }
-h1,h2,h3{
+h1,h2,h3 {
   text-transform: uppercase;
 }
 main {
   width: 100%;
   display: flex;
-  justify-content: justify;
+  
   border: 1px solid black;
   padding: 0 2em 0 0;
   margin: 0 2em 0 0 ;
@@ -36,7 +35,8 @@ main aside {
 }
 main aside header{
   text-align : center;
-  margin : 4em auto 4em auto;
+  margin : 0 auto 4em auto;
+  padding-top:4em;
 }
 #sport{
     display: block;
@@ -152,7 +152,7 @@ main article section article section{
   margin-top: 0px;
   padding-top: 0px;
   margin-right: auto;
-  padding-right:auto;
+ 
 }
 
 @media only screen and (max-width: 880px) {
@@ -169,4 +169,5 @@ main article section article section{
   }
   li article{
     display: block;
+     }
 }
