--- a/style.css
+++ b/style.css
@@ -1,37 +1,27 @@
-body{
-  font-family: Helvetica, sans-serif;
-    font-size: 15px;
-    --base: rgb(254,202,7);
-    margin: 0 0 0 0 ;
-    padding: 0 0 0 0 ;
-    opacity: 0.70;
+main {
+  font-family: sans-serif;
+  font-size: 15px;
+  opacity: 0.70;
+  display: flex;
+  width: 900px;
+  border: 1px solid black;
+  margin: auto ;
 }
 #rond {
     width:215px;
     height:215px;
     overflow:hidden;
-    -webkit-border-radius:120px;
-    -moz-border-radius:120px;
-    border-radius:120px;
+    border-radius:50%;
     box-shadow: 0px 0px 2px 2px #343434;
 }
 h1,h2,h3 {
   text-transform: uppercase;
 }
-main {
-  width: 100%;
-  display: flex;
-  
-  border: 1px solid black;
-  padding: 0 2em 0 0;
-  margin: 0 2em 0 0 ;
-}
 main aside {
   width: 33%;
-  background-color:var(--base) ;
-  margin-right: 1.5em;
-  margin-left: 0px;
-  padding-left: 0px;
+  background-color: rgb(254,202,7); ;
+  margin-left: 0;
+  padding-left: 0;
 }
 main aside header{
   text-align : center;
@@ -47,16 +37,19 @@ main aside header{
 main aside h2 {
   text-align : center;
   background-color: black;
-  height: 2em;
-  padding-top: 10px;
-  color:var(--base);
+  color: rgb(254,202,7);
+  height: 1.2em;
+  padding-top: 0.2em;
+  vertical-align: middle;
+  line-height: 1.2em;
 }
 main aside p{
-  padding: 0 20px 0 20px;
+  padding: 0 1em 0 1em;
+  display : flex;
 }
 article{
-  padding-left: 20px;
-  padding-top: 120px;
+  padding-left: 1.2em;
+  padding-top: 8em;
 }
 article header h1{
   font-size: 3em;
@@ -71,11 +64,11 @@ article header h3{
 }
 hr {
   height: 2px;
-  background-color: var(--base);
+  background-color: rgb(254,202,7);;
   border: none;
 }
 article header hr{
-  background-color: var(--base);
+  background-color: rgb(254,202,7);;
   width: 3.5em;  
   margin-top: 0px;
   margin-right: 95%;
@@ -83,14 +76,14 @@ article header hr{
 
 }
 article header h1 span{
-  color:var(--base);
+  color: rgb(254,202,7);
 }
 article section h2{
   margin-bottom: 0px;
   padding-bottom: 0px;
 }
 article section h2 i{
-  color: var(--base);
+ color: rgb(254,202,7);;
 }
 article section hr{
   padding-bottom: 0px;
@@ -111,8 +104,8 @@ li {
 li:first-child {
 	list-style-image: url("img/puce2.png");
 }
-li article{
-	display: flex;
+ul li article{
+  display: flex;
   justify-content: space-between;
   padding-left: 0.2em;
   margin-top: 0px;
@@ -120,7 +113,7 @@ li article{
 
 }
 li article header{
-  width: 25%;
+  min-width: 10em;
 }
 li article section{
 	margin-top: 0px;
@@ -152,10 +145,9 @@ main article section article section{
   margin-top: 0px;
   padding-top: 0px;
   margin-right: auto;
- 
 }
 
-@media only screen and (max-width: 880px) {
+@media only screen and (max-width: 930px) {
   main {
    display: block;
   }
@@ -170,4 +162,18 @@ main article section article section{
   li article{
     display: block;
      }
+}
+@media only screen and (max-width: 576px)
+{
+  body{
+    margin-left: 0;
+    margin-top: 0;
+  }
+  main{
+    display: block;
+    margin: auto;
+  }
+  article{
+    padding-left: 1em;
+  }
 }
