--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ main article section article section{
   padding-top: 0px;
   margin-right: auto;
 }
+main article section article  h2{
+  display: none;
+}
+
 
 @media only screen and (max-width: 930px) {
   main {
