--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ article header h3{
 }
 hr {
   height: 2px;
-  background-color: rgb(254,202,7);;
+  background-color: rgb(254,202,7);
   border: none;
 }
 article header hr{
