--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1,h2,h3 {
 }
 main aside {
   width: 33%;
-  background-color: rgb(254,202,7); ;
+  background-color: rgb(254,202,7); 
   margin-left: 0;
   padding-left: 0;
 }
