--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ hr {
   border: none;
 }
 article header hr{
-  background-color: rgb(254,202,7);;
+  background-color: rgb(254,202,7);
   width: 3.5em;  
   margin-top: 0px;
   margin-right: 95%;
