--- a/style.css
+++ b/style.css
@@ -144,7 +144,11 @@ li:first-child {
   justify-content: space-between;
 }
 @media only screen and (max-width: 930px) {
+  body{
+    margin: 0 0 0 0;
+  }
   main {
+    padding: 0 0 0 0;
    display: block;
   }
   main aside{
@@ -158,16 +162,23 @@ li:first-child {
   li article{
     display: block;
      }
+     #photo{
+      margin: 0 0 0 0;
+      padding-top: 2em;
+    }
 }
 @media only screen and (max-width: 576px)
 {
   body{
-    margin-left: 0;
-    margin-top: 0;
+ margin: 0 0 0 0;
   }
   main{
     display: block;
-    margin: auto;
+    margin: 0 0 0 0;
+  }
+  #photo{
+    margin: 0 0 0 0;
+    padding-top: 2em;
   }
   article{
     padding-left: 1em;
