--- a/style.css
+++ b/style.css
@@ -54,11 +54,11 @@ aside {
   margin: 3em auto 3em auto;
 }
 #rond {
-    width: 130px;
-    height: 130px;
-    overflow:hidden;
-    border-radius:50%;
-    box-shadow: 0px 0px 2px 2px #343434;
+  width: 140px;
+  height: auto;
+  border-radius:70%;
+  box-shadow: 0px 0px 2px 2px #343434;
+  overflow: hidden;   
 }
 .asidetitre {
   text-align : center;
