--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ aside {
 }
 #rond {
   width: 140px;
-  height: auto;
-  border-radius:70%;
+  height: 160px;
+  border-radius:50%;
   box-shadow: 0px 0px 2px 2px #343434;
   overflow: hidden;   
 }
