--- a/style.css
+++ b/style.css
@@ -53,12 +53,17 @@ aside {
   text-align : center;
   margin: 3em auto 3em auto;
 }
-#rond {
+#photo2{
+  display: inline-block;
   width: 140px;
-  height: 160px;
+  height: 140px;
   border-radius:50%;
   box-shadow: 0px 0px 2px 2px #343434;
-  overflow: hidden;   
+  overflow: hidden;  
+}
+#rond {
+  width: inherit;
+  height: inherit;   
 }
 .asidetitre {
   text-align : center;
@@ -226,6 +231,9 @@ li:first-child {
   main aside{
     width: 100%;
     margin: 0 0 0 0;
+  }
+  .asidepapropos{
+    padding-bottom: 0;
   }
   main article{
     width:80%;
