--- a/style.css
+++ b/style.css
@@ -55,15 +55,15 @@ aside {
 }
 #photo2{
   display: inline-block;
-  width: 140px;
-  height: 140px;
+  width: 150px;
+  height: 150px;
   border-radius:50%;
   box-shadow: 0px 0px 2px 2px #343434;
   overflow: hidden;  
 }
 #rond {
-  width: inherit;
-  height: inherit;   
+  width: 150px;
+  height: auto;   
 }
 .asidetitre {
   text-align : center;
